[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Arnaud locquet <alocquet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digits_iterator="0.1.0"
num= "0.2.0"
num-derive = "0.3.0"
num-traits = "0.2"
permutohedron = "0.2.4"