[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Arnaud locquet <alocquet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digits_iterator="0.1.0"
permutohedron = "0.2.4"
num = "0.2.0"
termion = "1.5.4"
regex = "1.3.1"
indexmap="1.3.0"